<resources>

    <string name="app_name" translatable="false">Automessenger</string>

    <string name="feed">Feed</string>
    <string name="nearby">Nearby</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_add_post">Add Post</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="car_number">Car number</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="title_activity_main_activity2" translatable="false">MainActivity2Activity</string>
    <string name="add_photo">Add photo</string>
    <string name="title_activity_post_details">Details</string>
    <string name="share">share</string>
    <string name="subscribe">Subscribe</string>
    <string name="done">Done</string>
    <string name="fab_add">Floating action button add</string>
    <string name="fab_camera">Camera button</string>
    <string name="fab_pen">Add new post button</string>
    <string name="fab_cancel">Cancel</string>
    <string name="nav_draw_head" translatable="false">Navigation drawer header image</string>
    <string name="sub_button" translatable="false">Subscribe button</string>
    <string name="photo">Photo</string>
    <string name="thumb_up" translatable="false">Vote up</string>
    <string name="thumb_down" translatable="false">Vote down</string>
    <string name="button_share">Share</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="add_comment_hint">Write comment here</string>
    <string name="post_comment" translatable="false">Post Comment</string>
    <string name="change_account">Change account</string>
    <string name="account_type" translatable="false">com.automessenger.app</string>
    <string name="validation_error">Incorrect data</string>
    <string name="default_number_value" translatable="false">0</string>
    <string name="default_location_filed">Location…</string>
    <string name="post">Post</string>
    <string name="today">today</string>
    <string name="make_post">POST</string>
    <string name="send_feedback">Feedback</string>
    <string name="delete">delete</string>
    <string name="delete_upper">DELETE</string>
    <string name="date">Date…</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>

</resources>
