<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

    <LinearLayout
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout">
        <FrameLayout
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/add_photo_button"
                android:onClick="addPhotoPressed">

            <TextView
                    android:layout_gravity="center"
                    android:text="@string/add_photo"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/photo"/>
            <ProgressBar
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:id="@+id/marker_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_height="wrap_content" />
            <TextView
                    android:clickable="true"
                    android:text="@string/make_post"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textColor="@color/white87"
                    android:background="@drawable/make_post_background"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postButton"
                    android:layout_gravity="center"
                    android:onClick="makePost"/>
        </FrameLayout>

        <EditText
                android:id="@+id/car_number"
                android:hint="@string/car_number"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textColor="@color/black54"
                android:lines="1"
                android:singleLine="true"
                tools:ignore="TextFields" android:text="111"/>

        <EditText
                android:id="@+id/post_description"
                android:hint="@string/description"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/black54"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="test"/>

    </LinearLayout>
    <include layout="@layout/shadow"
             android:layout_below="@id/toolbar"
             android:layout_width="fill_parent"
             android:layout_height="3dp"/>

</RelativeLayout>
