<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/post_details"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
    <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="viewPicture"
            android:contentDescription="@string/photo"/>
    <LinearLayout
            android:id="@+id/data_area"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/description_text"
                android:padding="16dp"
                android:textColor="@color/black87"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/date_text"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>
        <LinearLayout
                android:padding="8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/share_button"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_selected_back"
                    android:src="@drawable/ic_share_grey600_18dp"
                    android:onClick="actionShare"
                    android:contentDescription="@string/share"/>
            <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>


            <ImageButton
                    android:id="@+id/up_button"
                    android:padding="16dp"
                    android:background="@drawable/item_selected_back"
                    android:src="@drawable/ic_thumb_up_grey600_18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/thumb_up"/>

            <TextView
                    android:id="@+id/grade_number"
                    android:layout_gravity="center"
                    android:text="@string/default_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <ImageButton
                    android:id="@+id/down_button"
                    android:padding="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/item_selected_back"
                    android:src="@drawable/ic_thumb_down_grey600_18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/thumb_down"/>
        </LinearLayout>
        <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@drawable/light_shadow"/>
    </LinearLayout>
</LinearLayout>