<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include layout="@layout/toolbar"
                 android:id="@+id/toolbar"/>


        <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar">
        </FrameLayout>

        <include layout="@layout/shadow"
                 android:layout_below="@id/toolbar"
                 android:layout_width="fill_parent"
                 android:layout_height="3dp"/>

        <ImageButton
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:id="@+id/fab_add"
                android:visibility="visible"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fab"
                android:onClick="FABController"
                android:contentDescription="@string/fab_add" tools:ignore="RtlHardcoded"/>
        <RelativeLayout
                android:id="@+id/fab_pressed"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:visibility="invisible"
                android:background="@color/white54"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageButton
                    android:id="@+id/fab_camera"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="144dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_photo_camera_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fab_small"
                    android:onClick="FABController"
                    android:contentDescription="@string/fab_camera"
                    tools:ignore="RtlHardcoded"/>

            <ImageButton
                    android:id="@+id/fab_pen"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="88dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_edit_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fab_small"
                    android:onClick="FABController"
                    android:contentDescription="@string/fab_pen"
                    tools:ignore="RtlHardcoded"/>

            <ImageButton
                    android:id="@+id/fab_cancel"
                    android:layout_margin="16dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear_white_24dp"
                    android:background="@drawable/fab"
                    android:onClick="FABController"
                    android:contentDescription="@string/fab_cancel"
                    tools:ignore="RtlHardcoded"/>
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
            android:id="@+id/drawer"
            android:layout_gravity="start"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_width="0dp">

        <ImageView
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/header"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nav_draw_head"/>


        <LinearLayout
                android:id="@+id/item_feed"
                android:orientation="horizontal"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:background="@drawable/nav_item_selected_back"
                android:layout_height="wrap_content"
                android:onClick="NDController">
            <ImageView
                    android:padding="16dp"
                    android:src="@drawable/ic_star_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sub_button"/>
            <TextView
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:text="@string/feed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/item_nearby"
                android:orientation="horizontal"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:background="@drawable/nav_item_selected_back"
                android:layout_height="wrap_content"
                android:onClick="NDController">
            <ImageView
                    android:padding="16dp"
                    android:src="@drawable/ic_explore_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:text="@string/nearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/item_subscriptions"
                android:orientation="horizontal"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:background="@drawable/nav_item_selected_back"
                android:layout_height="wrap_content"
                android:onClick="NDController">
            <ImageView
                    android:padding="16dp"
                    android:src="@drawable/ic_list_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:text="@string/subscriptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/item_search"
                android:orientation="horizontal"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:background="@drawable/nav_item_selected_back"
                android:layout_height="wrap_content"
                android:onClick="NDController">
            <ImageView
                    android:padding="16dp"
                    android:src="@drawable/ic_search_grey600_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
            <LinearLayout
                    android:id="@+id/item_choose_account"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:background="@drawable/nav_item_selected_back"
                    android:layout_height="wrap_content"
                    android:onClick="NDController">
                    <ImageView
                            android:padding="16dp"
                            android:src="@drawable/ic_google_grey600_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/black87"
                            android:text="@string/change_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
            </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
