<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:id="@+id/comment_ll"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:background="@color/white87"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/description_field"
                android:textColor="@color/black87"
                android:layout_width="0dp"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="RtlHardcoded"/>

    </LinearLayout>

    <FrameLayout
            android:id="@+id/rate_panel"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@drawable/light_shadow"/>

        <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/date_field"
                    android:textColor="@color/app_blue"
                    android:textSize="12sp"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"/>

            <ImageButton
                    android:id="@+id/comment_thumb_up"
                    android:background="@drawable/item_selected_back"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_thumb_up_grey600_18dp"
                    android:contentDescription="@string/thumb_up"/>

            <TextView
                    android:id="@+id/rating_field"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:text="@string/default_number_value"
                    android:textColor="@color/app_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageButton
                    android:id="@+id/comment_thumb_down"
                    android:background="@drawable/item_selected_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_thumb_down_grey600_18dp"
                    android:contentDescription="@string/thumb_down"
                    tools:ignore="RtlHardcoded"/>
        </LinearLayout>
    </FrameLayout>
    <View
            android:background="@color/grey26"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>
</LinearLayout>