<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_gravity="bottom|center|left"
                android:id="@+id/relative_l"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded">

            <ImageView
                    android:id="@+id/card_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/photo"/>

            <TextView
                    android:layout_alignBottom="@id/card_image_view"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white87"
                    android:id="@+id/text_tag"
                    android:padding="16dp"
                    android:background="@drawable/title_gradient"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

        <TextView
                android:textSize="14sp"
                android:textColor="@color/black54"
                android:id="@+id/text_date"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="14sp"
                android:textColor="@color/black87"
                android:id="@+id/text_description"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"/>

        <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_room_grey600_18dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/location_filed"
                    android:textColor="@color/black54"
                    android:text="@string/default_location_filed"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/comment_count"
                    android:textColor="@color/black87"
                    android:text="@string/default_number_value"
                    android:padding="8dp"
                    android:layout_marginLeft="1dp"
                    android:layout_width="35dp"
                    android:gravity="end"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded"/>

            <ImageView
                    android:src="@drawable/ic_comment_grey600_18dp"
                    android:background="@drawable/oval"
                    android:padding="8dp"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:paddingLeft="16dp"
                    android:id="@+id/rate_count"
                    android:textColor="@color/black87"
                    android:text="@string/default_number_value"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="35dp"
                    android:gravity="end"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>

            <ImageView
                    android:src="@drawable/ic_thumbs_up_down_grey600_18dp"
                    android:background="@drawable/oval"
                    android:padding="8dp"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>